# TPA_Homework1

./: .gitignore  CMakeLists.txt  README.md  connection.cpp  main.cpp  openVim.sh  tests.cpp
external_libs/: Car.cpp  Car.h  EB_Device.cpp
include/: Gear.h  Machine.h
scripts/: cmd_line.cpp  connection.cpp  machine.cpp  tests.cpp
src/: Gear.cpp  Machine.cpp
tests/: CMakeLists.txt  GearTests.cpp
